@@ -15,6 +15,15 @@
 		</area>
 	</background>
 
+	<header>
+		<area x="2%" y="1%" width="60%" height="7%" layer="4">
+			<drawtext x="0" valign="center" font="{light}" fontsize="80%" color="{clrLightGray}" text="{title}" />
+		</area>
+		<area x="25%" y="6%" width="36%" height="5%" layer="4">
+			<drawtext align="center" valign="center" font="{light}" fontsize="80%" color="{clrLightGray}" text="{vdrusagestring} " />
+		</area>
+	</header>
+
 	<menuitems x="0" y="14%" orientation="vertical" width="100%" height="75%" align="center" numlistelements="{00_numRecordingsmenuitems}">
 		<listelement>
 			<areacontainer condition="not{folder}">
